# QuantDive

./: .gitignore  Dockerfile  README.md  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: docker.yaml  test.yaml
src/stockhealth/: __init__.py  __main__.py  analyzer.py  model.py  simulation.py  training.py
src/utilities/: calendar.py  graph.py  validator.py
tests/: __init__.py  __main__.py  test_.py
