[metadata]
name = QuantDive
version = 1.0.0-alpha.1
author = Siddhartha Banerjee
author_email = info+code@emotive.academy 
description = A package to dive deep with quantitative economics 
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.10
package_dir =
    = src/econsite
    = src/econutils
packages = find:

[options]
python_requires = >=3.10
install_requires = file: requirements.txt

[flake8]
max-line-length = 88
extend-ignore = E203, W503